hphp/hack/test/typecheck/is_expression/invalid_hint_void.php.exp
File "invalid_hint_void.php", line 5, characters 5-15:
  err
File "invalid_hint_void.php", line 4, characters 13-16:
The void typehint can only be used to describe a function return type (Naming[2063])
